--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,46 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
+    <link
+      rel="stylesheet"
+      href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
+    />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+          <link rel="stylesheet" href="https://b.stripecdn.com/manage/assets/sail-09c5a62bd090e47c728e4ef9a123c26d.css">
+      <link rel="stylesheet" href="https://b.stripecdn.com/manage/assets/application.connect_express-8bf83e0a1b4d55af94673fe353ddb4c2.css">
+    <style>
+    html {
+      background-color: #F8FAFC;
+    }
+    html, body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', sans-serif;
+      font-size: 14px;
+    }
+
+    @media screen and (max-width: 460px) {
+      html {
+        background-color: #ffffff;
+      }
+    }
+    </style>
     <title>debtCrusher</title>
   </head>
   <body>
     <div id="root"></div>
+    <!-- <div id="connect-light"></div>
+
+    <script src="https://js.stripe.com/v3/"></script>
+
+    <script type="application/json" id="preloaded_json">{&quot;error&quot;:&quot;This link is invalid or has expired.&quot;}</script>
+    <script type="application/json" id="tiny_preloaded_json">{&quot;cdn_base_url&quot;:&quot;https://b.stripecdn.com/manage&quot;,&quot;csrf_token&quot;:&quot;wl6Qk3LRIp_45n7K4NCalSNZM_b8M1dbZFSFETwevN_tiMpvD6C9xsPzLhtY7yKqv0f52bALK8oRdQOknB7PCw==&quot;,&quot;current_head&quot;:&quot;1b294872b4223b98d9531c5aebaf790b759c1e24&quot;,&quot;current_version&quot;:&quot;2019-11-05&quot;,&quot;host_set&quot;:&quot;default&quot;,&quot;js_base_url&quot;:&quot;https://b.stripecdn.com/manage/assets/&quot;,&quot;sentry_enabled&quot;:true,&quot;sentry_projects&quot;:{&quot;dashboard_platform&quot;:&quot;https://2c9d67d04892426ab2c02b9958953e15@errors.stripe.com/7&quot;,&quot;payments_dashboard&quot;:&quot;https://cdde896176af4cf787aca547768904fe@errors.stripe.com/269&quot;,&quot;terminal&quot;:&quot;https://40a30b4473ea43509b61eda0024fd8a2@errors.stripe.com/271&quot;,&quot;atlas&quot;:&quot;https://ed68af4cb70541eda554e01372542a06@errors.stripe.com/272&quot;,&quot;emerald&quot;:&quot;https://63ba7ae545264498ab3bce45317f3812@errors.stripe.com/276&quot;,&quot;platform_experience&quot;:&quot;https://cb6868a2387b4cba82027fd8d7a2fd6e@errors.stripe.com/277&quot;,&quot;connect_apps&quot;:&quot;https://cb6868a2387b4cba82027fd8d7a2fd6e@errors.stripe.com/277&quot;,&quot;account_experience&quot;:&quot;https://52f8101b6d0a44e2ab120943aa489aee@errors.stripe.com/278&quot;,&quot;security_products&quot;:&quot;https://e0cad97696704d51bf173a88ebc06cc4@errors.stripe.com/287&quot;,&quot;ruxp&quot;:&quot;https://b07faf88bde9438096f5fe593f3af14d@errors.stripe.com/302&quot;,&quot;invoices&quot;:&quot;https://6d8c4b388926455c8525989a3dd634e4@errors.stripe.com/307&quot;,&quot;subscriptions&quot;:&quot;https://f3e0a2437d0247fabf6ce23ab0ea5f9d@errors.stripe.com/306&quot;,&quot;customers&quot;:&quot;https://f3e0a2437d0247fabf6ce23ab0ea5f9d@errors.stripe.com/306&quot;,&quot;coupons&quot;:&quot;https://f3e0a2437d0247fabf6ce23ab0ea5f9d@errors.stripe.com/306&quot;,&quot;products&quot;:&quot;https://f3e0a2437d0247fabf6ce23ab0ea5f9d@errors.stripe.com/306&quot;,&quot;billing&quot;:&quot;https://f3e0a2437d0247fabf6ce23ab0ea5f9d@errors.stripe.com/306&quot;,&quot;billx&quot;:&quot;https://c0757829041f47d789a1fc2e8fd024be@errors.stripe.com/318&quot;,&quot;growth_product&quot;:&quot;https://8c13f30cb4e64d01a1e98f6f7c2b15b6@errors.stripe.com/313&quot;},&quot;use_app_metadata_endpoint&quot;:false}</script>
+    <script src="https://b.stripecdn.com/manage/assets/config-a26fa4247b5444a88334e0863551d047.js"></script>
+    <script src="https://b.stripecdn.com/manage/assets/asset_files-33306dfcd3e11fe812c628fdc26b50ba.js"></script>
+
+<script type="application/json" id="analytics_config">{&quot;ga&quot;:{}}</script>
+
+      <script src="https://b.stripecdn.com/manage/assets/runtime~connect_express.a3846b23b69cb1916604.min.js"></script>
+  <script src="https://b.stripecdn.com/manage/assets/connect.vendors~connect_express.797e614c75c6ff70f731.min.js"></script>
+  <script src="https://b.stripecdn.com/manage/assets/connect.connect_express.46d88fc7924fb7ab585d.min.js"></script> -->
   </body>
 </html>
