--- a/public/index.html
+++ b/public/index.html
@@ -11,22 +11,30 @@
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-          <link rel="stylesheet" href="https://b.stripecdn.com/manage/assets/sail-09c5a62bd090e47c728e4ef9a123c26d.css">
-      <link rel="stylesheet" href="https://b.stripecdn.com/manage/assets/application.connect_express-8bf83e0a1b4d55af94673fe353ddb4c2.css">
+    <link
+      rel="stylesheet"
+      href="https://b.stripecdn.com/manage/assets/sail-09c5a62bd090e47c728e4ef9a123c26d.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://b.stripecdn.com/manage/assets/application.connect_express-8bf83e0a1b4d55af94673fe353ddb4c2.css"
+    />
     <style>
-    html {
-      background-color: #F8FAFC;
-    }
-    html, body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', sans-serif;
-      font-size: 14px;
-    }
-
-    @media screen and (max-width: 460px) {
       html {
-        background-color: #ffffff;
+        background-color: #f8fafc;
       }
-    }
+      html,
+      body {
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
+          "Helvetica Neue", sans-serif;
+        font-size: 14px;
+      }
+
+      @media screen and (max-width: 460px) {
+        html {
+          background-color: #ffffff;
+        }
+      }
     </style>
     <title>debtCrusher</title>
   </head>
